--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-device-info": "^0.9.3",
     "react-native-drawer": "^2.2.6",
     "react-native-i18n": "0.0.8",
+    "react-native-radio-buttons": "^0.12.1",
     "react-native-router-flux": "^3.30.6",
     "react-native-vector-icons": "^2.0.2",
     "react-redux": "^4.4.2",
