--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "lint": "standard --verbose | snazzy",
+    "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build/ModuleCache/* && rm -rf node_modules/ && npm cache clean && npm i",
     "test": "ava",
@@ -22,10 +23,11 @@
     "apisauce": "^0.3.0",
     "format-json": "^1.0.3",
     "querystringify": "0.0.3",
-    "ramda": "^0.21.0",
-    "react": "^15.1.0",
-    "react-native": "^0.30.0",
+    "ramda": "^0.22.0",
+    "react": "~15.2.1",
+    "react-native": "^0.31.0",
     "react-native-animatable": "^0.6.0",
+    "react-native-collapsible": "^0.7.0",
     "react-native-device-info": "^0.9.3",
     "react-native-drawer": "^2.2.6",
     "react-native-i18n": "0.0.8",
@@ -45,12 +47,13 @@
     "babel-eslint": "^6.1.0",
     "babel-preset-es2015": "^6.9.0",
     "enzyme": "^2.3.0",
+    "ghooks": "^1.3.2",
     "mockery": "^1.7.0",
     "nyc": "^7.0.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-native-mock": "^0.2.3",
-    "reactotron": "^0.7.0",
+    "reactotron": "^0.8.0",
     "snazzy": "^4.0.0",
     "standard": "^7.1.2"
   },
@@ -78,5 +81,10 @@
       "XMLHttpRequest",
       "FormData"
     ]
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "if [ -d 'ignite-base' ]; then cd ignite-base; fi; npm run lint"
+    }
   }
 }
