--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-i18n": "0.0.8",
     "react-native-radio-buttons": "^0.12.1",
     "react-native-router-flux": "^3.30.6",
+    "react-native-svg": "^4.0.0",
     "react-native-vector-icons": "^2.0.2",
     "react-redux": "^4.4.2",
     "redux": "^3.4.0",
