--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "~15.2.1",
     "react-native": "^0.31.0",
     "react-native-animatable": "^0.6.0",
+    "react-native-autocomplete-input": "^1.1.2",
     "react-native-collapsible": "^0.7.0",
     "react-native-device-info": "^0.9.3",
     "react-native-drawer": "^2.2.6",
