--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-router-flux": "^3.30.6",
     "react-native-vector-icons": "^2.0.2",
     "react-redux": "^4.4.2",
+    "realm": "^0.14.3",
     "redux": "^3.4.0",
     "redux-logger": "^2.4.0",
     "redux-persist": "^3.1.1",
