--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "apisauce": "^0.3.0",
     "format-json": "^1.0.3",
+    "parse5": "^1.4.1",
     "querystringify": "0.0.3",
     "ramda": "^0.22.0",
     "react": "~15.2.1",
