--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-htmlview": "github:tk1cntt/react-native-htmlview#master",
     "react-native-i18n": "0.0.8",
     "react-native-radio-buttons": "^0.12.1",
+    "react-native-root-toast": "^1.0.3",
     "react-native-router-flux": "^3.35.0",
     "react-native-vector-icons": "^2.1.0",
     "react-redux": "^4.4.2",
