--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "apisauce": "^0.5.0",
     "format-json": "^1.0.3",
+    "moment": "^2.14.1",
     "parse5": "^1.4.1",
     "querystringify": "0.0.4",
     "ramda": "^0.22.1",
