--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "fixcode": "standard --fix",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build/ModuleCache/* && rm -rf node_modules/ && npm cache clean && npm i",
-    "test": "ava",
+    "test": "NODE_ENV=production ava",
     "test:watch": "ava --watch",
     "coverage": "nyc ava && nyc report --reporter=html && open coverage/index.html",
     "tron": "node_modules/.bin/reactotron",
@@ -29,15 +29,15 @@
     "querystringify": "0.0.4",
     "ramda": "^0.22.1",
     "react": "~15.3.0",
-    "react-native": "^0.32.0",
+    "react-native": "^0.33.0",
     "react-native-animatable": "^0.6.0",
     "react-native-autocomplete-input": "^1.1.2",
     "react-native-collapsible": "^0.7.0",
     "react-native-config": "github:skellock/react-native-config#fix-missing-env",
-    "react-native-device-info": "^0.9.4",
+    "react-native-device-info": "^0.9.5",
     "react-native-drawer": "^2.3.0",
     "react-native-htmlview": "github:tk1cntt/react-native-htmlview#master",
-    "react-native-i18n": "0.0.8",
+    "react-native-i18n": "^0.1.1",
     "react-native-radio-buttons": "^0.12.1",
     "react-native-root-toast": "^1.0.3",
     "react-native-router-flux": "^3.35.0",
@@ -45,11 +45,11 @@
     "react-native-vector-icons": "^2.1.0",
     "react-redux": "^4.4.2",
     "realm": "^0.14.3",
-    "redux": "^3.4.0",
+    "redux": "^3.6.0",
     "redux-logger": "^2.4.0",
     "redux-persist": "^3.5.0",
     "redux-saga": "^0.11.1",
-    "reduxsauce": "0.1.0",
+    "reduxsauce": "0.2.0",
     "seamless-immutable": "^6.1.0"
   },
   "devDependencies": {
