--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-config": "github:skellock/react-native-config#fix-missing-env",
     "react-native-device-info": "^0.9.5",
     "react-native-drawer": "^2.3.0",
+    "react-native-fs": "^2.0.1-rc.2",
     "react-native-htmlview": "github:tk1cntt/react-native-htmlview#master",
     "react-native-i18n": "^0.1.1",
     "react-native-radio-buttons": "^0.12.1",
