--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,9 +135,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fetch-blob')
     compile project(':react-native-fs')
-    compile 'com.facebook.stetho:stetho:1.3.1'
-    compile 'com.uphyca:stetho_realm:0.9.0'
+    //compile 'com.facebook.stetho:stetho:1.3.1'
+    //compile 'com.uphyca:stetho_realm:0.9.0'
     compile project(':react-native-config')
     compile project(':realm')
     compile project(':react-native-vector-icons')
