--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-zip-archive')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-fs')
     //compile 'com.facebook.stetho:stetho:1.3.1'
