--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-swiper": "^1.4.11",
     "react-native-tableview-simple": "^0.12.0",
     "react-native-vector-icons": "^2.1.0",
+    "react-native-zip-archive": "0.0.11",
     "react-redux": "^4.4.2",
     "realm": "^0.14.3",
     "redux": "^3.6.0",
