--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kanjimaster"
+    package="com.kantangroup.kanjimaster.lite"
     android:versionCode="1"
     android:versionName="1.0">
 
@@ -13,13 +13,13 @@
         android:targetSdkVersion="22" />
 
     <application
-      android:name=".MainApplication"
+      android:name="com.kantangroup.kanjimaster.lite.MainApplication"
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
       <activity
-        android:name=".MainActivity"
+        android:name="com.kantangroup.kanjimaster.lite.MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
         <intent-filter>
