--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "react": "~15.3.0",
     "react-native": "^0.33.0",
     "react-native-animatable": "^0.6.0",
-    "react-native-autocomplete-input": "^1.1.2",
+    "react-native-autocomplete-input": "github:ReactNativeVN/react-native-autocomplete-input#master",
     "react-native-collapsible": "^0.7.0",
     "react-native-config": "github:skellock/react-native-config#fix-missing-env",
     "react-native-device-info": "^0.9.5",
     "react-native-drawer": "^2.3.0",
     "react-native-fetch-blob": "^0.9.4",
     "react-native-fs": "^2.0.1-rc.2",
-    "react-native-htmlview": "github:tk1cntt/react-native-htmlview#master",
+    "react-native-htmlview": "github:ReactNativeVN/react-native-htmlview#master",
     "react-native-i18n": "^0.1.1",
     "react-native-progress": "^3.1.0",
     "react-native-radio-buttons": "^0.12.1",
