--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-radio-buttons": "^0.12.1",
     "react-native-root-toast": "^1.0.3",
     "react-native-router-flux": "^3.35.0",
+    "react-native-swipe-list-view": "^0.3.0",
     "react-native-swiper": "^1.4.11",
     "react-native-tableview-simple": "^0.12.0",
     "react-native-vector-icons": "^2.1.0",
