--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,6 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+org.gradle.jvmargs=-Xmx2048M
 
 MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
 MYAPP_RELEASE_KEY_ALIAS=my-key-alias
