--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build/ModuleCache/* && rm -rf node_modules/ && npm cache clean && npm i",
     "test": "NODE_ENV=production ava",
     "test:watch": "ava --watch",
-    "coverage": "nyc ava && nyc report --reporter=html && open coverage/index.html",
+    "coverage": "nyc ava && nyc report --reporter=html && open coverage/index.html || xdg-open coverage/index.html",
     "tron": "node_modules/.bin/reactotron",
     "android:build": "cd android && ./gradlew assembleRelease",
     "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
     "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
-    "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82"
+    "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "dependencies": {
     "apisauce": "^0.5.0",
@@ -29,11 +30,11 @@
     "querystringify": "0.0.4",
     "ramda": "^0.22.1",
     "react": "~15.3.0",
-    "react-native": "^0.33.0",
+    "react-native": "^0.35.0",
     "react-native-animatable": "^0.6.0",
     "react-native-autocomplete-input": "github:ReactNativeVN/react-native-autocomplete-input#master",
     "react-native-collapsible": "^0.7.0",
-    "react-native-config": "github:skellock/react-native-config#fix-missing-env",
+    "react-native-config": "^0.1.0",
     "react-native-device-info": "^0.9.5",
     "react-native-drawer": "^2.3.0",
     "react-native-fetch-blob": "^0.9.4",
@@ -60,9 +61,10 @@
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "babel-eslint": "^6.1.0",
+    "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.14.0",
     "enzyme": "^2.3.0",
+    "flow-bin": "^0.32.0",
     "ghooks": "^1.3.2",
     "mockery": "^1.7.0",
     "nyc": "^8.1.0",
@@ -72,7 +74,7 @@
     "reactotron-apisauce": "^1.1.2",
     "reactotron-react-native": "^1.1.2",
     "reactotron-redux": "^1.1.2",
-    "snazzy": "^4.0.1",
+    "snazzy": "^5.0.0",
     "standard": "^8.0.0"
   },
   "ava": {
