--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "prerelease": "./npm-version/pre-version.sh",
     "release": "./npm-version/version-ios.sh",
     "postrelease": "./npm-version/post-version.sh"
@@ -32,7 +33,7 @@
     "querystringify": "0.0.4",
     "ramda": "^0.22.1",
     "react": "~15.3.0",
-    "react-native": "^0.35.0",
+    "react-native": "^0.37.0",
     "react-native-animatable": "^0.6.0",
     "react-native-autocomplete-input": "github:ReactNativeVN/react-native-autocomplete-input#master",
     "react-native-collapsible": "^0.7.0",
