Upgrade to ignite 1.12

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # Your secrets go here e.g.
 # MY_SECRET_API_KEY=tacosareawesome
+DOWNLOAD_DATA=https://raw.githubusercontent.com/tk1cntt/KanjiMaster/master/App/Fixtures/samples.zip
