--- a/package.json
+++ b/package.json
@@ -19,26 +19,27 @@
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "flow": "flow --show-all-errors",
     "prerelease": "./npm-version/pre-version.sh",
     "release": "./npm-version/version-ios.sh",
     "postrelease": "./npm-version/post-version.sh"
   },
   "dependencies": {
-    "apisauce": "^0.5.0",
+    "apisauce": "^0.6.0",
     "fastpriorityqueue": "^0.1.0",
     "format-json": "^1.0.3",
     "moment": "^2.14.1",
     "parse5": "^1.4.1",
+    "lodash": "^4.17.2",
     "querystringify": "0.0.4",
     "ramda": "^0.22.1",
-    "react": "~15.3.0",
+    "react": "~15.3.1",
     "react-native": "^0.37.0",
     "react-native-animatable": "^0.6.0",
     "react-native-autocomplete-input": "github:ReactNativeVN/react-native-autocomplete-input#master",
     "react-native-collapsible": "^0.7.0",
-    "react-native-config": "^0.1.0",
-    "react-native-device-info": "^0.9.5",
+    "react-native-config": "^0.1.2",
+    "react-native-device-info": "^0.9.6",
     "react-native-drawer": "^2.3.0",
     "react-native-fetch-blob": "^0.9.4",
     "react-native-fs": "^2.0.1-rc.2",
@@ -47,38 +48,39 @@
     "react-native-progress": "^3.1.0",
     "react-native-radio-buttons": "^0.12.1",
     "react-native-root-toast": "^1.0.3",
-    "react-native-router-flux": "^3.35.0",
+    "react-native-router-flux": "^3.37.0",
     "react-native-swipe-list-view": "^0.3.0",
     "react-native-swiper": "^1.4.11",
     "react-native-tableview-simple": "^0.12.0",
-    "react-native-vector-icons": "^2.1.0",
+    "react-native-vector-icons": "^3.0.0",
     "react-native-zip-archive": "0.0.11",
-    "react-redux": "^4.4.2",
+    "react-redux": "^4.4.6",
     "realm": "^0.14.3",
     "redux": "^3.6.0",
-    "redux-logger": "^2.4.0",
+    "redux-logger": "^2.7.4",
     "redux-persist": "^3.5.0",
-    "redux-saga": "^0.11.1",
+    "redux-saga": "^0.13.0",
     "reduxsauce": "0.2.0",
-    "seamless-immutable": "^6.1.0"
+    "seamless-immutable": "^6.3.0"
   },
   "devDependencies": {
-    "ava": "^0.16.0",
-    "babel-eslint": "^7.0.0",
-    "babel-preset-es2015": "^6.14.0",
-    "enzyme": "^2.3.0",
-    "flow-bin": "^0.32.0",
+    "ava": "^0.17.0",
+    "babel-eslint": "^7.1.1",
+    "babel-preset-es2015": "^6.18.0",
+    "enzyme": "^2.6.0",
+    "flow-bin": "0.33.0",
     "ghooks": "^1.3.2",
-    "mockery": "^1.7.0",
-    "nyc": "^8.1.0",
+    "mockery": "^2.0.0",
+    "nyc": "^9.0.1",
     "react-addons-test-utils": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-native-mock": "^0.2.6",
-    "reactotron-apisauce": "^1.1.2",
-    "reactotron-react-native": "^1.1.2",
-    "reactotron-redux": "^1.1.2",
+    "react-native-mock": "^0.2.8",
+    "reactotron-apisauce": "^1.5.2",
+    "reactotron-react-native": "^1.5.2",
+    "reactotron-redux": "^1.5.2",
+    "reactotron-redux-saga": "^1.5.2",
     "snazzy": "^5.0.0",
-    "standard": "^8.0.0"
+    "standard-flow": "^1.0.0"
   },
   "ava": {
     "files": [
@@ -102,7 +104,8 @@
       "navigator",
       "__DEV__",
       "XMLHttpRequest",
-      "FormData"
+      "FormData",
+      "React$Element"
     ]
   },
   "config": {
