--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,6 +145,7 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-i18n')
     compile project(':react-native-device-info')
+    compile project(':react-native-config')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
@@ -152,6 +153,7 @@ dependencies {
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
+  
 task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
