--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "KanjiMaster",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -21,25 +21,44 @@
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
     "precommit": "npm run git-hook",
     "prepush": "npm run git-hook",
-    "git-hook": "npm run lint -s && npm test -s"
+    "git-hook": "npm run lint -s && npm test -s",
+    "prerelease": "./npm-version/pre-version.sh",
+    "release": "./npm-version/version-ios.sh",
+    "postrelease": "./npm-version/post-version.sh"
   },
   "dependencies": {
     "apisauce": "^0.10.0",
+    "fastpriorityqueue": "^0.2.3",
     "format-json": "^1.0.3",
+    "moment": "^2.17.1",
+    "parse5": "^3.0.2",
     "lodash": "^4.17.2",
     "querystringify": "0.0.4",
     "ramda": "^0.23.0",
     "react": "~15.4.1",
     "react-native": "0.42.0",
     "react-native-animatable": "^1.1.0",
-    "react-native-config": "^0.2.1",
+    "react-native-autocomplete-input": "github:ReactNativeVN/react-native-autocomplete-input#master",
+    "react-native-collapsible": "^0.8.0",
+    "react-native-config": "^0.3.1",
     "react-native-device-info": "^0.10.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-fetch-blob": "^0.10.2",
+    "react-native-fs": "^2.1.0-rc.1",
+    "react-native-htmlview": "github:ReactNativeVN/react-native-htmlview#master",
     "react-native-i18n": "^1.0.0",
+    "react-native-progress": "^3.2.0",
+    "react-native-radio-buttons": "^0.14.0",
+    "react-native-root-toast": "^1.0.3",
     "react-native-router-flux": "^3.37.0",
+    "react-native-swipe-list-view": "^0.4.0",
+    "react-native-swiper": "^1.5.4",
+    "react-native-tableview-simple": "^0.16.4",
     "react-native-vector-icons": "^4.0.0",
+    "react-native-zip-archive": "^1.0.0",
     "react-navigation": "^1.0.0-beta.6",
     "react-redux": "^5.0.2",
+    "realm": "^1.0.2",
     "redux": "^3.6.0",
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
