--- a/package.json
+++ b/package.json
@@ -25,43 +25,43 @@
     "postrelease": "./npm-version/post-version.sh"
   },
   "dependencies": {
-    "apisauce": "^0.6.0",
-    "fastpriorityqueue": "^0.1.0",
+    "apisauce": "^0.10.0",
+    "fastpriorityqueue": "^0.2.3",
     "format-json": "^1.0.3",
-    "moment": "^2.14.1",
-    "parse5": "^1.4.1",
+    "moment": "^2.17.1",
+    "parse5": "^3.0.2",
     "lodash": "^4.17.2",
     "querystringify": "0.0.4",
-    "ramda": "^0.22.1",
-    "react": "~15.3.1",
-    "react-native": "^0.37.0",
-    "react-native-animatable": "^0.6.0",
+    "ramda": "^0.23.0",
+    "react": "~15.4.1",
+    "react-native": "0.42.0",
+    "react-native-animatable": "^1.1.0",
     "react-native-autocomplete-input": "github:ReactNativeVN/react-native-autocomplete-input#master",
-    "react-native-collapsible": "^0.7.0",
-    "react-native-config": "^0.1.2",
-    "react-native-device-info": "^0.9.6",
+    "react-native-collapsible": "^0.8.0",
+    "react-native-config": "^0.3.1",
+    "react-native-device-info": "^0.10.0",
     "react-native-drawer": "^2.3.0",
-    "react-native-fetch-blob": "^0.9.4",
-    "react-native-fs": "^2.0.1-rc.2",
+    "react-native-fetch-blob": "^0.10.2",
+    "react-native-fs": "^2.1.0-rc.1",
     "react-native-htmlview": "github:ReactNativeVN/react-native-htmlview#master",
-    "react-native-i18n": "^0.1.1",
-    "react-native-progress": "^3.1.0",
-    "react-native-radio-buttons": "^0.12.1",
+    "react-native-i18n": "^1.0.0",
+    "react-native-progress": "^3.2.0",
+    "react-native-radio-buttons": "^0.14.0",
     "react-native-root-toast": "^1.0.3",
     "react-native-router-flux": "^3.37.0",
-    "react-native-swipe-list-view": "^0.3.0",
-    "react-native-swiper": "^1.4.11",
-    "react-native-tableview-simple": "^0.12.0",
-    "react-native-vector-icons": "^3.0.0",
-    "react-native-zip-archive": "0.0.11",
-    "react-redux": "^4.4.6",
-    "realm": "^0.14.3",
+    "react-native-swipe-list-view": "^0.4.0",
+    "react-native-swiper": "^1.5.4",
+    "react-native-tableview-simple": "^0.16.4",
+    "react-native-vector-icons": "^4.0.0",
+    "react-native-zip-archive": "^1.0.0",
+    "react-redux": "^5.0.2",
+    "realm": "^1.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-persist": "^3.5.0",
-    "redux-saga": "^0.13.0",
-    "reduxsauce": "0.2.0",
-    "seamless-immutable": "^6.3.0"
+    "redux-persist": "^4.1.0",
+    "redux-saga": "^0.14.3",
+    "reduxsauce": "0.4.1",
+    "seamless-immutable": "^7.0.1"
   },
   "devDependencies": {
     "ava": "^0.17.0",
