--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "KanjiMaster",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -31,10 +31,10 @@
     "moment": "^2.17.1",
     "parse5": "^3.0.2",
     "lodash": "^4.17.4",
-    "querystringify": "0.0.4",
+    "querystringify": "^0.0.4",
     "ramda": "^0.23.0",
-    "react": "~15.4.2",
-    "react-native": "0.42.0",
+    "react": "^15.4.2",
+    "react-native": "^0.42.0",
     "react-native-animatable": "^1.1.0",
     "react-native-autocomplete-input": "github:ReactNativeVN/react-native-autocomplete-input#master",
     "react-native-collapsible": "^0.8.0",
@@ -53,14 +53,14 @@
     "react-native-swiper": "^1.5.4",
     "react-native-tableview-simple": "^0.16.4",
     "react-native-vector-icons": "^4.0.0",
-    "react-native-zip-archive": "^1.0.0",
+    "react-native-zip-archive": "^1.1.0",
     "react-redux": "^5.0.3",
     "realm": "^1.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.2",
     "redux-persist": "^4.4.2",
     "redux-saga": "^0.14.3",
-    "reduxsauce": "0.4.1",
+    "reduxsauce": "^0.4.1",
     "seamless-immutable": "^7.0.1"
   },
   "devDependencies": {
@@ -68,7 +68,7 @@
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "enzyme": "^2.7.1",
-    "flow-bin": "0.41.0",
+    "flow-bin": "^0.41.0",
     "ghooks": "^2.0.0",
     "mockery": "^2.0.0",
     "nyc": "^10.1.2",
