--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "apisauce": "^0.10.0",
     "fastpriorityqueue": "^0.2.3",
     "format-json": "^1.0.3",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "parse5": "^3.0.2",
-    "lodash": "^4.17.4",
     "querystringify": "^0.0.4",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
@@ -53,7 +53,7 @@
     "react-native-swiper": "^1.5.4",
     "react-native-tableview-simple": "^0.16.4",
     "react-native-vector-icons": "^4.0.0",
-    "react-native-zip-archive": "^1.1.0",
+    "react-native-zip-archive": "github:mockingbot/react-native-zip-archive#next",
     "react-redux": "^5.0.3",
     "realm": "^1.0.2",
     "redux": "^3.6.0",
